test/spec_vectors/conversions/fail/module_14.wat
(module (func (result f32) (f32.convert_i32_s (i64.const 0))))